re PR fortran/84511 (Internal compiler error from directly printing return of C_LOC)

2018-02-23  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/84511
	* trans-io.c (transfer_expr): Deal with C_LOC in transfer statement.

From-SVN: r257943